correct element spacing

--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,20 @@ body {
     text-align: center;
     height: 100vh; /* Full viewport height */
     background-color: #f4f4f4;
+    gap: 10px;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     max-width: 600px; /* Adjust based on your preference */
+    align-items: center;
 }
 
 #main-container {
@@ -23,23 +29,39 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh; /* Full viewport height */
+    gap: 10px;
 }
 
 /* Styling for the landing page */
-#landing-page {
-    padding: 70px;
-    width: 100%;
+#word-test-container {
+    padding: 0px;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     gap: 10px;
+}
+
+/* Styling for the landing page */
+#word-entry-container {
+    padding: 70px;
+    width: 100%;
+    display: flex;
+    height: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px; 
+} 
+
+.flex-item {
+    margin: 5px;
 }
 
 h1 {
     font-size: 30px;
-    }
+    } 
 
 /* Button styling */
 button {
@@ -50,6 +72,9 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 button:hover {
@@ -67,6 +92,7 @@ button:hover {
 #entry-container {
     margin-top: 20px;
     text-align: center;
+    gap: 50px;
 }
 
 #digit-input {
@@ -74,6 +100,7 @@ button:hover {
     padding: 10px;
     width: 50px;
     text-align: center;
+    gap: 10px;
 }
 
 #progress-container {
@@ -83,6 +110,7 @@ button:hover {
     right: 0;
     height: 20px; /* Adjust based on your preference */
     text-align: center;
+    gap: 10px;
 }
 
 /* Progress bar container */
@@ -91,6 +119,7 @@ button:hover {
     background-color: #eee;
     height: 20px;
     margin-top: 20px;
+    gap: 10px;
 }
 
 #progress-label {
@@ -98,6 +127,7 @@ button:hover {
     width: 100%;
     color: green; /* Ensures the label is visible on a green background */
     z-index: 1; /* Puts the label above the progress bar */
+    gap: 10px;
 }
 
 #task-progress {
@@ -106,4 +136,12 @@ button:hover {
     height: 100%;
     background-color: green;
     transition: width 0.5s ease-in-out;
+}
+/* Apply box-sizing globally */
+* {
+    box-sizing: border-box;
+}
+
+.bolder {
+    font-weight: 900;
 }
